objects/Territory_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access_Level__c</fullName>
        <label>Account Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Access_Level__c</fullName>
        <label>Activity Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Access_Level__c</fullName>
        <label>Case Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Access_Level__c</fullName>
        <label>Contact Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Access_Level__c</fullName>
        <label>Device Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Id_To_Share_Record_With__c</fullName>
        <description>Role Id of portal user to share found records with</description>
        <label>Group Id To Share With</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Access_Level__c</fullName>
        <label>Lead Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Access_Level__c</fullName>
        <label>Opportunity Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Demos_Access_Level__c</fullName>
        <label>Services Demos Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserRoleName__c</fullName>
        <label>UserRoleName</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PT - Territory Sharing</label>
    <nameField>
        <label>Territory Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Sharing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>